clusters/main/kubernetes/flux-system/weave/app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: weave
  labels:
    pod-security.kubernetes.io/enforce: privileged
