clusters/main/kubernetes/flux-system/weave/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weave
  namespace: weave
  annotations:
    cert-manager.io/cluster-issuer: le-prod
    cert-manager.io/private-key-rotation-policy: Always
    # Adds auth
    nginx.ingress.kubernetes.io/auth-method: 'GET'
    nginx.ingress.kubernetes.io/auth-url: 'http://${AUTHELIA_INTERNAL_DNS}/api/verify'
    nginx.ingress.kubernetes.io/auth-signin: 'https://auth.${DOMAIN_0}?rm=$request_method'
    nginx.ingress.kubernetes.io/auth-response-headers: 'Remote-User,Remote-Name,Remote-Groups,Remote-Email'
    # Homepage integration
    gethomepage.dev/description: Weave GitOps provides insights into your application deployments, and makes continuous delivery with GitOps easier to adopt and scale across your teams.
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Infrastructure
    gethomepage.dev/href: https://gitops.${DOMAIN_0}/
    gethomepage.dev/icon: https://raw.githubusercontent.com/weaveworks/weave-gitops/refs/heads/main/ui/images/logoLight.svg
    gethomepage.dev/name: Weave GitOps
    gethomepage.dev/pod-selector: app.kubernetes.io/instance=weave
spec:
  ingressClassName: "external"
  rules:
    - host: gitops.${DOMAIN_0}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: weave-weave-gitops
                port:
                  number: 9001
  tls:
    - hosts:
        - gitops.${DOMAIN_0}
      secretName: flux-system-weave
